[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
log = "0.4.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] } # to access the DOM (to hide the loading text)
wasm-logger = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
